--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,25 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
+    <reporting>
+     <plugins>
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-checkstyle-plugin</artifactId>
+         <version>3.2.1</version>
+         <reportSets>
+           <reportSet>
+             <reports>
+               <report>checkstyle</report>
+             </reports>
+           </reportSet>
+         </reportSets>
+       </plugin>
+     </plugins>
+   </reporting>
+   <properties>
+       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+       <maven.compiler.source>1.7</maven.compiler.source>
+       <maven.compiler.target>1.7</maven.compiler.target>
+   </properties>
 </project>
